<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 1,activity title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_UserManual_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@color/azure"
            android:textSize="30sp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content01">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content02">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content03">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content04">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content05">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:background="@color/azure"
        android:layout_height="wrap_content"
        android:text="@string/tv_UserManual_content06">
    </TextView>
</LinearLayout>