<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 1,activity title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@color/azure"
            android:textSize="30sp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <!-- 2,to put in new activation code.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_putInNewCode"
            android:textAllCaps="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_ActivationCode_putInNewCode"
            android:maxLength="16"
            android:hint="@string/et_MainActivity_putInActivationCode"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_ActivationCode_putInNewCode"
            android:text="@string/bt_ActivationCode_putInNewCode"
            android:textAllCaps="false"/>
    </LinearLayout>
    <!-- 3,the column names for current activation codes.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/azure">
        <TextView
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_activationCode">
        </TextView>
        <TextView
            android:id="@+id/when"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_activationDate">
        </TextView>
        <TextView
            android:id="@+id/year"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_codeDuration">
        </TextView>
        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_codeStartDate">
        </TextView>
        <TextView
            android:id="@+id/expire"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/purple"
            android:layout_height="wrap_content"
            android:text="@string/tv_ActivationCode_codeExpiredDate">
        </TextView>
    </LinearLayout>
    <!-- 4,the container for the query results.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lv_ActivationCode_container_showCurrentlyValidActivationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>
</LinearLayout>