<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <!-- 1,activity title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_MainActivity_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@color/azure"
            android:textSize="30sp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <!-- 2,the interface before activation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/ll_MainActivity_beforeActivation">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_MainActivity_putInActivationCode"
            android:textAllCaps="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_MainActivity_putInActivationCode"
            android:textAllCaps="false"
            android:maxLength="16"
            android:hint="@string/et_MainActivity_putInActivationCode"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_MainActivity_putInActivationCode"
            android:text="@string/bt_MainActivity_putInActivationCode"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_MainActivity_tipsBeforeActivation01"
            android:id="@+id/tv_MainActivity_tipsBeforeActivation01"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:background="@color/azure"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_MainActivity_tipsBeforeActivation02"
            android:id="@+id/tv_MainActivity_tipsBeforeActivation02"
            android:gravity="start"
            android:textSize="20sp"
            android:textColor="@color/purple"
            android:background="@color/azure"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_MainActivity_tipsBeforeActivation"
            android:gravity="start"
            android:background="@color/azure"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_MainActivity_re_activate"
            android:text="@string/bt_MainActivity_re_activate"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_MainActivity_tipsForReActivate"
            android:gravity="start"
            android:textSize="15sp"
            android:textColor="@color/forestgreen"
            android:background="@color/azure"
            />
    </LinearLayout>
    <!-- 3,the interface after activation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_MainActivity_afterActivation"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:textSize="30sp"
            android:textColor="@color/purple"
            android:id="@+id/bt_MainActivity_beginWork"
            android:text="@string/bt_MainActivity_beginWork"
            android:textAllCaps="false"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_MainActivity_settings"
            android:text="@string/bt_MainActivity_settings"
            android:textAllCaps="false"/>
        <LinearLayout
            android:id="@+id/ll_MainActivity_showTipsAfterActivation"
            android:background="@color/azure"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>