<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 1,activity title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_Settings_title"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:background="@color/azure"
            android:textSize="30sp"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>
    <!-- 2,insert numbers-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_Settings_insertData"
            android:text="@string/bt_Settings_insertData"
            android:textAllCaps="false"/>
        <LinearLayout
        android:id="@+id/ll_Settings_currentlyValidNumberAmount"
        android:background="@color/azure"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
    <!-- 3,statistics-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_Settings_statistics"
            android:text="@string/bt_Settings_statistics"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azure"
            android:text="@string/tv_Settings_statistics">
        </TextView>
    </LinearLayout>
    <!-- 4,the management of the amount for every round -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_Settings_amountOfFriendsForEachRound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_Settings_amountOfFriendsForEachRound"
            android:textAllCaps="false">
        </Button>
        <LinearLayout
            android:id="@+id/ll_Settings_amountOfFriendsForEachRound"
            android:background="@color/azure"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
    <!-- 5,to input the activation code-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_Settings_activationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_Settings_activationCode"
            android:textAllCaps="false">
        </Button>
        <LinearLayout
            android:id="@+id/ll_Settings_activationCode"
            android:background="@color/azure"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
    <!-- 6,user manual-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_Settings_userManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_Settings_userManual"
            android:textAllCaps="false">
        </Button>
    </LinearLayout>
</LinearLayout>